--- a/app/components/logo/logo.module.css
+++ b/app/components/logo/logo.module.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
 }
 
 .bird {
@@ -38,4 +39,32 @@
   position: absolute;
   top: 25%;
   right: -7.5px;
+}
+
+/* RWD */
+@media (min-width: 1024px) {
+  .logo {
+    position: absolute;
+    top: 3rem;
+    right: 0;
+    transform: translate(50%, 0);
+    width: 6rem;
+  }
+
+  .bird {
+    width: 50%;
+    height: 50%;
+    border-bottom: 10px solid black;
+    border-top: 10px solid black;
+    border-radius: 80% 40% 40% 0;
+  }
+
+  .bird::after {
+    width: 10px;
+  }
+
+  .bird::before {
+    width: 15px;
+    right: -15px;
+  }
 }
