--- a/app/components/logo/logo.module.css
+++ b/app/components/logo/logo.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   background-color: white;
+  z-index: 10;
 }
 
 .bird {
@@ -42,7 +43,7 @@
 }
 
 /* RWD */
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .logo {
     position: absolute;
     top: 3rem;
